corrected timeline spacing

--- a/coppy technowire/css/timeline.css
+++ b/coppy technowire/css/timeline.css
@@ -40,6 +40,7 @@
   
   .left {
     left: 0;
+    text-align: left;
   }
   
   
@@ -67,6 +68,20 @@
   .image_box img{
     max-width: 100px;
     height: auto;
+    margin-left: 150px;
+  }
+
+  .left .content{
+    justify-content: left;
+  }
+
+  .right .content{
+    justify-content: right;
+  }
+  
+    .right img{
+    margin-right: 150px;
+    margin-left: 0px;
   }
 
   .image_box{
@@ -75,16 +90,6 @@
 
   .left > .content{  
     flex-direction: row-reverse;
-  }
-
-  .text_box > h2{
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .text_box > p{
-    padding-left: 0;
-    padding-right: 0;
   }
   
   @media screen and (max-width: 600px) {
@@ -118,6 +123,13 @@
 
     .right > .image_box{
         float: left;
+      }
+
+      .image_box img{
+        max-width: 100px;
+        height: auto;
+        margin-left: 0px;
+        margin-right: 0;
       }
   }
 
